// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-serializer-json-date-id-mask it will serialize barcodes 1`] = `
Object {
  "my barcode": "<barcode>",
}
`;

exports[`jest-serializer-json-date-id-mask it will serialize ids 1`] = `
Object {
  "myId": "<id>",
}
`;

exports[`jest-serializer-json-date-id-mask it will serialize todays date 1`] = `
Object {
  "someKey": "<date>",
  "someOtherKey": "<date>",
}
`;

exports[`jest-serializer-json-date-id-mask wont do anything to non objects 1`] = `"id"`;

exports[`jest-serializer-json-date-id-mask wont do anything to non objects 2`] = `1990-01-01T00:00:00.000Z`;

exports[`jest-serializer-json-date-id-mask wont do anything to non objects 3`] = `0`;

exports[`jest-serializer-json-date-id-mask works with nested objects 1`] = `
Object {
  "id": Object {
    "id": Object {
      "date": "<date>",
      "id": "<id>",
      "someOtherDate": "<date>",
    },
  },
}
`;
